folder structure update

--- a/src/scss/restaurant-card.scss
+++ b/src/scss/restaurant-card.scss
@@ -6,6 +6,20 @@
   padding: 0 20px;
   margin-bottom: 20px;
   cursor: pointer;
+  position: relative;
+  &__tag {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: $primary-color;
+    color: $white;
+    padding: 5px 25px;
+    border-radius: 5px;
+    display: block;
+    width: 150px;
+    z-index: 1;
+    font-size: 15px;
+  }
   &__image {
     height: auto;
     border-radius: 10px;
