--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,6 +3,7 @@ $primary-color: #fc5426;
 $secondary-color: #ffd188;
 $black: #000;
 $white: #fff;
+$green: #33a043;
 
 //fonts
 $primary-font: "Poppins", sans-serif;
