search functionality done

--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -2,4 +2,45 @@
 
 .search {
   padding: 30px 0;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  .input-wrap {
+    position: relative;
+    width: 300px;
+    .clear-search {
+      font-size: 25px;
+      position: absolute;
+      top: 3px;
+      right: 3px;
+      height: 40px;
+      display: block;
+      width: 30px;
+      color: rgba($black, 0.2);
+      cursor: pointer;
+    }
+    input {
+      width: 100%;
+      height: 40px;
+      padding: 0 30px 0 15px;
+      border: 1px solid rgba($black, 0.2);
+      &:focus {
+        border: 1px solid rgba($black, 0.2);
+        outline: none;
+      }
+    }
+  }
+  button {
+    width: 100px;
+    height: 40px;
+    color: $white;
+    background-color: $primary-color;
+    border: 1px solid $primary-color;
+    cursor: pointer;
+    transition: all 0.3s;
+    &:hover {
+      border-color: $primary-dark;
+      background-color: $primary-dark;
+    }
+  }
 }
